# -

./: .gitignore  404.html  EA_SETUP_GUIDE.txt  Procfile  README_COUNTER.md  README_PYBOT.md  USDJPY_AutoTrader.mq4  USDJPY_Scalper.mq4  USDJPY_TrendPullback_MT5.mq5  about.html  baccarat-stats.html  backtest-all-sessions.csv  backtest-cherry.csv  backtest-juggler.js  backtest-settings.js  backtest-summary.csv  blackjack-casino.html  blackjack.html  blackjack.py  contact.html  counting.html  dashboard.py  disclaimer.html  fx-affiliate.html  fx-auto-trading.html  fx-beginner-guide.html  fx-leverage.html  fx-mistakes.html  fx-spread.html  fx-swap.html  fx-tax-guide.html  fx-usdjpy.html  index.html  juggler-yosou.html  prepare_histdata.py  privacy-policy.html  pyproject.toml  requirements.txt  robots.txt  run_backtest.py  (+7 more)
auto_video_uploader/: .env.example  .gitignore  README.md  config.py  main.py  make_voiceover_video.py  publish_now.txt  publish_voiceover.py  requirements.txt  run_daily.bat  run_now.txt  samples_now.txt  topics.csv  uploaded_log.csv  voice_samples.py  ①セットアップ.bat  ②動画を作る.bat  ③YouTube認証.bat  ④アップロード実行.bat  ⑤かんたん設定.bat  ⑥毎日自動実行を設定.bat  ⑦毎日自動実行を解除.bat
docs/: BLACKJACK_COUNTER_AI_SPEC.md  index.html
fx_bot/: __init__.py  backtest.py  config.py  data.py  indicators.py  live.py  oanda.py  strategy.py
jagler/: .gitignore  DEPLOY.md  README.md  analysis.py  app.py  collect.py  config.py  database.py  exporter.py  gsheet_store.py  importer.py  jagler.html  requirements.txt  sample_data.py  scraper.py  storage.py
juggler-data-fetcher/: README.md  (+1 more)
(+213 files in other folders)
